# rs_cleanarchitecture_example

./: README.md
my_server/: Cargo.toml
my_server/src/lib/: entities.rs  lib.rs  repos_interfaces.rs  repos_mem.rs  usecases.rs
