[package]
name = "my_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_server_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "my_server"
path = "src/bin/main.rs"



[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.18", features = ["env-filter"] }
